2007-09-29  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Base/CameraFile.cs: GetDataAndSize handles the scenario when a null
	  pointer is returned.

2007-09-28  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs, src/FileSystem.cs, src/Camera.cs: Renamed the CameraDevice
	  property to just 'Device'

2007-09-27  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Added method to help guess the mimetype
	* src/FileSystem.cs: Added methods to check if a directory already exists,
	  to create a new directory and remove an existing one. Setting mimetype
	  on new files correctly.
	* src/Files/MusicFile.cs: Added public constructor
	* src/Base/CameraFile.cs: SetDataAndLength :Copy the data into the unmanaged
	  array.  GetDataAndLength: If we are returned a null pointer, don't try
	  to copy out data.

2007-09-27  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Base/CameraFile.cs: Forgot to change the method declaration

2007-09-27  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Base/CameraFile.cs: Passing the data the correct way to
	  gp_file_set_data_and_size

2007-09-25  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/FileSystem.cs: The internal code correctly prefixes the path to a
	  directory with the filesystems name

2007-09-25  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/FileSystem.cs: Added in some checks to fix path combining.

2007-09-25  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Base/CameraFile.cs: Removing the call to free the pointer as i
	  shouldn't be doing that.

2007-09-25  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Fixed the XML parsing. It still borks when libgphoto2 returns
	  invalid XML. I need a proper workaround for mimetype detection when i
	  only have the metadata.
	* src/FileSystem.cs: GetFiles returns a list of files rather than strings
	* src/Files/MusicFile.cs: Identifier is 'AlbumName' not 'Album'

2007-09-23  Alan McGovern <alan.mcgovern@gmail.com> 
